# animal-guardians-back

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/ai_models/: architectures.py
app/api/v1/: router.py
app/api/v1/endpoints/: disease.py  hospital.py  insurance.py  prediction.py  upload.py  users.py
app/core/: config.py
app/crud/: disease.py  hospital.py  insurance.py  user.py
app/db/: base.py  session.py
app/models/: __init__.py  base.py  disease.py  hospital.py  insurance.py  user.py
app/schemas/: disease.py  hospital.py  insurance.py  predict.py  upload.py  user.py
app/services/: predict_service.py  user_service.py
migrations/: env.py
migrations/versions/: 47bddaaf63ed_add_password_to_user.py  537c8cc1cff2_change_user_id_type.py  60d44f9fda17_initial_migration.py  9df4d603b2ef_init.py  d6fbf9b1fcbb_type_추가.py
tests/: conftest.py
tests/api/v1/: test_users.py
tests/crud/: test_user.py
