[project]
name = "app"
version = "0.1.0"
description = "FastAPI Application"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlmodel==0.0.14",
    "gunicorn==20.1.0",
    "pydantic==2.7.1",
    "python-dotenv==1.0.0",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9"
]