[project]
name = "app"
version = "0.1.0"
description = "FastAPI Application"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "gunicorn==20.1.0",
    "pydantic==2.7.1",
    "python-dotenv==1.0.0",
    "asyncpg==0.29.0",
    "alembic (>=1.14.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.24.1"
pytest-cov = "^6.0.0"
aiosqlite = "^0.21.0"
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = "."

